# Kaidan

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  EchoBot.cpp  EchoBot.h  EchoPayload.h  EchoPayloadParserFactory.h  EchoPayloadSerializer.h  Kaidan.pro  LICENSE  LICENSE.txt  NEWS  README.md  changelog.md  clickable.json  kaidan.pro  kaidan.qrc  kaidan_qml.qrc  kirigami-icons.qrc
.gitlab/issue_templates/: release.md
app/: kaidan.pro
app/resources/: LoginPage.qml  RosterPage.qml  deployment.pri  main.qml  qml.qrc
app/source/: EchoBot.cpp  EchoBot.h  EchoPayloadSerializer.h  Kaidan.cpp  Kaidan.h  RosterContoller.cpp  RosterContoller.h  RosterItem.cpp  RosterItem.h  main.cpp
cmake/: FindGloox.cmake  FindSwiften.cmake
data/: data.qrc  servers.json
data/images/: images.qrc
doc/: kaidan_qml_api.md
doc/maintenance/: license.md  release.md  translation.md
i18n/: 0_i18n.qrc  CMakeLists.txt  ar.ts  base.ts  ca.ts  cs.ts  de.ts  de_AT.ts  de_DE.ts  el.ts  es.ts  eu.ts  fr.ts  gl.ts  he.ts  hu.ts  it.ts  ja.ts  mr.ts  ms.ts  ms_Arab.ts  nb.ts  nl.ts  pa.ts  pl.ts  pt.ts  pt_BR.ts  ru.ts  translations.qrc  uk.ts  xy.ts.example
misc/: im.kaidan.kaidan.appdata.xml  im.kaidan.kaidan.desktop  kaidan.desktop  kaidan.notifyrc  metadata.xml  misc.qrc  notifications.qrc  qtquickcontrols2.conf
misc/android/: AndroidManifest.xml  AndroidManifest.xml.in  build.gradle  gradle.properties~  local.properties~
misc/ios/: Info.plist  Info.plist.in
misc/macos/: Info.plist
misc/ubuntu-touch/: apparmor.json  kaidan.desktop  manifest.json  manifest.json.in
rpm/: harbour-kaidan.spec
sailfish/: README.md  harbour-kaidan.desktop
sailfish/qml/: main.qml
sailfish/qml/cover/: CoverPage.qml
sailfish/qml/pages/: ContactsPage.qml  ConversationsPage.qml  MenuPage.qml  MessagingPage.qml  PreferencesPage.qml
src/: AccountManager.cpp  AccountManager.h  AudioDeviceModel.cpp  AudioDeviceModel.h  AvatarFileStorage.cpp  AvatarFileStorage.h  BitsOfBinaryImageProvider.cpp  BitsOfBinaryImageProvider.h  CMakeLists.txt  CameraImageCapture.cpp  CameraImageCapture.h  CameraModel.cpp  CameraModel.h  ChatStateCache.cpp  ChatStateCache.h  ChatStateHandler.cpp  ChatStateHandler.h  ClientThread.cpp  ClientThread.h  ClientWorker.cpp  ClientWorker.h  CredentialsGenerator.cpp  CredentialsGenerator.h  CredentialsValidator.cpp  CredentialsValidator.h  DataFormModel.cpp  DataFormModel.h  Database.cpp  Database.h  DiscoveryManager.cpp  DiscoveryManager.h  DownloadManager.cpp  DownloadManager.h  EchoPayload.h  EchoPayloadParserFactory.h  EchoPayloadSerializer.h  EmojiModel.cpp  EmojiModel.h  Enums.h  Globals.h  (+109 more)
src/gloox-extensions/: bitsofbinarycache.h  bitsofbinarydata.cpp  bitsofbinarydata.h  bitsofbinaryhandler.h  bitsofbinarymanager.cpp  bitsofbinarymanager.h  bitsofbinarymemorycache.cpp  bitsofbinarymemorycache.h  gloox-extensions.h  hash.cpp  hash.h  httpuploader.h  httpuploadhandler.h  httpuploadmanager.cpp  httpuploadmanager.h  httpuploadrequest.cpp  httpuploadrequest.h  httpuploadslot.cpp  httpuploadslot.h  jinglefile.cpp  jinglefile.h  processinghints.cpp  processinghints.h  reference.cpp  reference.h  sims.cpp  sims.h  thumb.cpp  thumb.h
src/hsluv-c/: hsluv.c
src/persistence/: Database.cpp  Database.h  MessageController.cpp  MessageController.h  Persistence.cpp  Persistence.h
src/qml/: AboutDialog.qml  AboutPage.qml  AboutSheet.qml  AccountDeletionFromClientAndServerConfirmationPage.qml  AccountDeletionFromClientConfirmationPage.qml  AccountDeletionPage.qml  AccountTransferPage.qml  AddContactPage.qml  ChatPage.qml  ChatPageBase.qml  EmptyChatPage.qml  GlobalDrawer.qml  LoginPage.qml  LoginSettingsPage.qml  MultimediaSettingsPage.qml  QrCodeOnboardingPage.qml  QrCodeScannerPage.qml  RegistrationLoginDecisionPage.qml  RosterAddContactSheet.qml  RosterPage.qml  RosterRemoveContactSheet.qml  SettingsPage.qml  SettingsPopup.qml  StartPage.qml  UserProfilePage.qml  main.qml  qml.qrc
src/qml/account-transfer/: PasswordRemovalFromPlainTextAndQrCodeConfirmationPage.qml  PasswordRemovalFromPlainTextConfirmationPage.qml  PasswordRemovalPage.qml
src/qml/elements/: Avatar.qml  BinaryDecisionPage.qml  Button.qml  CenteredAdaptiveButton.qml  CenteredAdaptiveHighlightedButton.qml  CenteredAdaptiveText.qml  ChatMessage.qml  ChatMessageContextMenu.qml  ChatMessageImage.qml  ChatPageSearchView.qml  ChatPageSendingPane.qml  ChatStateIndicator.qml  ClickableIcon.qml  ConfirmationPage.qml  DataForm.qml  EmojiPicker.qml  ExplainedContentPage.qml  ExplanationTogglePage.qml  FileChooser.qml  FileChooserDesktop.qml  FileChooserMobile.qml  IconButton.qml  MediaPreview.qml  MediaPreviewAudio.qml  MediaPreviewImage.qml  MediaPreviewLoader.qml  MediaPreviewLocation.qml  MediaPreviewOther.qml  MediaPreviewVideo.qml  MessageCounter.qml  NewMedia.qml  NewMediaLoader.qml  NewMediaLocation.qml  QrCode.qml  QrCodeScanner.qml  RosterAddContactSheet.qml  RosterListItem.qml  RosterRemoveContactSheet.qml  RosterRenameContactSheet.qml  RoundImage.qml  (+8 more)
src/qml/registration/: AutomaticRegistrationPage.qml  CustomFormView.qml  CustomFormViewAutomaticRegistration.qml  View.qml  (+14 more)
src/qxmpp-exts/: QXmppColorGenerator.cpp  QXmppColorGenerator.h  QXmppHttpUploadIq.cpp  QXmppHttpUploadIq.h  QXmppUploadManager.cpp  QXmppUploadManager.h  QXmppUploadRequestManager.cpp  QXmppUploadRequestManager.h  QXmppUri.cpp  QXmppUri.h
src/singleapp/: singleapplication.cpp  singleapplication.h
tests/: CMakeLists.txt  PresenceCacheTest.cpp  UserPresenceModelTest.cpp  UserPresenceWatcherTest.cpp
utils/: AppImage.sh  build-android-deps.sh  build-android-docker.sh  build-android.sh  build-appimage.sh  build-click.sh  build-ios.sh  build-linux-appimage.sh  build-linux-click.sh  build-mac-osxcross.sh  build-mac.sh  build-windows-mxe.sh  code-tidy.sh  convert-prl-libs-to-cmake.pl  generate-license.py  render-logos.sh  renderlogos.sh  travis-build.sh  travis-dependencies.sh  update-copyright-year.py  upgrade-qml-imports.sh
utils/travis/: build.sh  common.sh  dependencies.sh
(+26 files in other folders)
